--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,21 @@
         	<artifactId>mysql-connector-j</artifactId>
         	<version>9.2.0</version>
     	</dependency>
+
+		<dependency>
+        	<groupId>org.springframework.security</groupId>
+        	<artifactId>spring-security-crypto</artifactId>
+    	</dependency>
+
+		<dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-data-jpa</artifactId>
+    	</dependency>
+
+		<dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-security</artifactId>
+    	</dependency>
 	</dependencies>
 
 	<build>
