--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=ankenkanri-system
+spring.datasource.url=jdbc:mysql://localhost:3306/anken
+spring.datasource.username=root
+spring.datasource.password=902k799mMac
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
