--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=902k799mMac
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+server.error.whitelabel.enabled=false
