--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
         	<artifactId>spring-boot-starter-data-jpa</artifactId>
     	</dependency>
 
+		<dependency>
+    		<groupId>org.projectlombok</groupId>
+    		<artifactId>lombok</artifactId>
+    		<version>1.18.30</version>
+    		<scope>provided</scope>
+    	</dependency>
+
 	</dependencies>
 
 	<build>
